--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             "Hololive": { type: "vtuber", cards: ["Calliope", "Coco", "Okayu", "Mio"] },
             "Love Live!": { type: "anime", cards: ["Maki", "Setsuna"] },
             "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno"] },
+            "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
             "Fate": { type: "game", cards: ["Nero", "Scathach"] },
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
