Add Marvel and DC

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <div id="filterToggle">🎯 Filters</div>
     <div id="filterModal">
         <label><input type="checkbox" class="typeCheckbox" value="game" checked> Video Game</label>
-        <label><input type="checkbox" class="typeCheckbox" value="anime" checked> Anime</label>
+        <label><input type="checkbox" class="typeCheckbox" value="anime" checked> Anime/Serie/Comic</label>
         <label><input type="checkbox" class="typeCheckbox" value="vtuber" checked> Vtuber</label>
         <button id="applyFilters">Apply</button>
     </div>
@@ -206,6 +206,8 @@
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
             "Azur Lane": { type: "game", cards: ["Elbe"] },
             "Umamusume": { type: "game", cards: ["Kiseki"] },
+            "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
+            "Marvel": { type: "anime", cards: ["Psylocke", "Rogue"] },
             "Other": { type: "other", cards: ["Ram", "Yoruichi", "Rei", "Weiss", "Purah", "2B", "Mitsuri"] }
         };
 
