--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
             "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno"] },
             "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
+            "Bleach": { type: "anime", cards: ["Yoruichi", "Nelliel_tu_Odelschwanck", "Rangiku"] },
             "Fate": { type: "game", cards: ["Nero", "Scathach"] },
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
@@ -208,7 +209,7 @@
             "Umamusume": { type: "game", cards: ["Kiseki"] },
             "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
             "Marvel": { type: "anime", cards: ["Psylocke", "Rogue"] },
-            "Other": { type: "other", cards: ["Ram", "Yoruichi", "Rei", "Weiss", "Purah", "2B", "Mitsuri"] }
+            "Other": { type: "other", cards: ["Ram", "Rei", "Weiss", "Purah", "2B", "Mitsuri"] }
         };
 
         const searchInput = document.getElementById("searchInput");
