Add BB and Zenobia from Fate

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
             "Bleach": { type: "anime", cards: ["Yoruichi", "Nelliel_tu_Odelschwanck", "Rangiku"] },
-            "Fate": { type: "game", cards: ["Nero", "Scathach"] },
+            "Fate": { type: "game", cards: ["Nero", "Scathach", "BB", "Zenobia"] },
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
             "Azur Lane": { type: "game", cards: ["Elbe"] },
