Add Rosaria and Furina from Genshin

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
     <script>
         const cardData = {
-            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula"] },
+            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
