Add Github in footer

--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
         <p>
             <a href="index.html">🏠 Index</a> |
             <a href="contact.html">📬 Contact me</a> |
-            <a href="https://twitter.com/SnowBunnBunn" target="_blank">🐦 Twitter</a>
+            <a href="https://twitter.com/SnowBunnBunn" target="_blank">🐦 Twitter</a> |
+            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">📂 GitHub</a>
         </p>
     </footer>
 
