--- a/viewer.html
+++ b/viewer.html
@@ -96,6 +96,19 @@
                 #variantButtons button.active {
                     background: #ffffff30;
                 }
+        footer {
+            text-align: center;
+            margin-top: 40px;
+            padding: 20px;
+            border-top: 1px solid #333;
+            color: #aaa;
+        }
+
+            footer a {
+                color: #aaa;
+                text-decoration: none;
+                margin: 0 10px;
+            }
     </style>
 </head>
 <body>
