--- a/contact.html
+++ b/contact.html
@@ -49,9 +49,18 @@
             }
 
         footer {
-            margin-top: 40px;
             text-align: center;
+            margin-top: 40px;
+            padding: 20px;
+            border-top: 1px solid #333;
+            color: #aaa;
         }
+
+            footer a {
+                color: #aaa;
+                text-decoration: none;
+                margin: 0 10px;
+            }
 
         a {
             color: #aaa;
@@ -75,13 +84,12 @@
         <button type="submit">Send</button>
     </form>
 
-    <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
+    <footer>
         <p>
-            <a href="index.html" style="color:#aaa; text-decoration:none; margin-right: 15px;">🏠 Index</a>
-            |
-            <a href="contact.html" style="color:#aaa; text-decoration:none; margin-left: 15px;">📬 Contact me</a>
-            |
-            <a href="https://twitter.com/SnowBunnBunn" target="_blank" style="color:#aaa; text-decoration:none; margin-left: 15px;">🐦 Twitter</a>
+            <a href="index.html">🏠 Index</a> |
+            <a href="contact.html">📬 Contact me</a> |
+            <a href="https://twitter.com/SnowBunnBunn" target="_blank">🐦 Twitter</a> |
+            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">📂 GitHub</a>
         </p>
     </footer>
 </body>
