Add Rias in Index

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
             "Hololive": { type: "vtuber", cards: ["Calliope", "Coco", "Okayu", "Mio"] },
             "Love Live!": { type: "anime", cards: ["Maki", "Setsuna"] },
-            "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno"] },
+            "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno", "Rias"] },
             "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
             "Bleach": { type: "anime", cards: ["Yoruichi", "Nelliel_tu_Odelschwanck", "Rangiku"] },
