Add Indie vtuber
Vtuber :
- Shylily
- Patra
- Melody
- Silvervale

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
             "Hololive": { type: "vtuber", cards: ["Calliope", "Coco", "Okayu", "Mio"] },
+            "Indie Virutal Youtuber": { type: "vtuber", cards: ["Shylily", "Patra", "Melody", "Silvervale"] },
             "Love Live!": { type: "anime", cards: ["Maki", "Setsuna"] },
             "High School DxD": { type: "anime", cards: ["Rossweiss", "Akeno", "Rias"] },
             "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
