--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             "Sword Art Online": {type :"anime", cards: ["Asuna","Sinon","Leafa"] },
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
             "Bleach": { type: "anime", cards: ["Yoruichi", "Nelliel_tu_Odelschwanck", "Rangiku"] },
+            "Sousou no Frieren": { type: "anime", cards: ["Frieren", "Fern", "Übel"] },
             "Fate": { type: "game", cards: ["Nero", "Scathach", "BB", "Zenobia"] },
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
