Add Zenless Zone Zero
ZZZ:
- Hoshimi Miyabi
- Evelyn Chevalier
- Caesar King
- Jane Doe

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
     <script>
         const cardData = {
             "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina"] },
+            "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
