Wuthering Waves + Latest Cards
WuWa:
- Jinhsi
- Cantarella
- Phoebe
- Zani

--- a/contact.html
+++ b/contact.html
@@ -84,12 +84,13 @@
         <button type="submit">Send</button>
     </form>
 
-    <footer>
+    <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
         <p>
             <a href="index.html">🏠 Index</a> |
-            <a href="contact.html">📬 Contact me</a> |
+            <a href="contact.html">📬 Contact</a> |
             <a href="https://twitter.com/SnowBunnBunn" target="_blank">🐦 Twitter</a> |
-            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">📂 GitHub</a>
+            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">💻 GitHub</a> |
+            <a href="latest.html">🆕 Latest Cards</a>
         </p>
     </footer>
 </body>
