--- a/index.html
+++ b/index.html
@@ -182,12 +182,13 @@
     <input type="text" id="searchInput" placeholder="Search a character or serie/game...">
     <div id="cardList"></div>
 
-    <footer>
+    <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
         <p>
             <a href="index.html">🏠 Index</a> |
-            <a href="contact.html">📬 Contact me</a> |
+            <a href="contact.html">📬 Contact</a> |
             <a href="https://twitter.com/SnowBunnBunn" target="_blank">🐦 Twitter</a> |
-            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">📂 GitHub</a>
+            <a href="https://github.com/SnowBunnBunn/curly-guacamole" target="_blank">💻 GitHub</a> |
+            <a href="latest.html">🆕 Latest Cards</a>
         </p>
     </footer>
 
@@ -195,6 +196,7 @@
         const cardData = {
             "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina"] },
             "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane"] },
+            "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
