--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -19,10 +20,16 @@
             margin-bottom: 30px;
         }
 
-        form {
+        .form-group {
             display: flex;
             flex-direction: column;
-            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        label {
+            margin-bottom: 5px;
+            font-weight: bold;
+            font-size: 15px;
         }
 
         input, textarea {
@@ -44,9 +51,27 @@
             cursor: pointer;
         }
 
-            button:hover {
-                background-color: #444;
-            }
+        button:hover {
+            background-color: #444;
+        }
+
+        .required {
+            color: #f77;
+            margin-left: 5px;
+        }
+
+        .optional {
+            color: #aaa;
+            font-weight: normal;
+            margin-left: 5px;
+        }
+
+        .note {
+            font-size: 13px;
+            color: #aaa;
+            text-align: center;
+            margin-top: 10px;
+        }
 
         footer {
             text-align: center;
@@ -56,11 +81,11 @@
             color: #aaa;
         }
 
-            footer a {
-                color: #aaa;
-                text-decoration: none;
-                margin: 0 10px;
-            }
+        footer a {
+            color: #aaa;
+            text-decoration: none;
+            margin: 0 10px;
+        }
 
         a {
             color: #aaa;
@@ -72,19 +97,30 @@
     <h1>Contact me</h1>
 
     <form action="https://formsubmit.co/snowbunny.twitter@gmail.com" method="POST">
-        <input type="text" name="name" placeholder="Your name" required>
-        <input type="email" name="email" placeholder="Your email" required>
-        <textarea name="message" rows="6" placeholder="Your message" required></textarea>
+        <div class="form-group">
+            <label for="name">Your name <span class="required">*</span></label>
+            <input type="text" id="name" name="name" placeholder="Your name" required>
+        </div>
 
-        <!-- options Formsubmit -->
+        <div class="form-group">
+            <label for="email">Your email <span class="optional">(optional)</span></label>
+            <input type="email" id="email" name="email" placeholder="Your email">
+        </div>
+
+        <div class="form-group">
+            <label for="message">Your message <span class="required">*</span></label>
+            <textarea id="message" name="message" rows="6" placeholder="Your message" required></textarea>
+        </div>
+
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="box">
         <input type="hidden" name="_next" value="https://snowbunnbunn.github.io/curly-guacamole/index.html">
 
         <button type="submit">Send</button>
+        <p class="note"><span class="required">*</span> Required fields</p>
     </form>
 
-    <footer style="text-align:center; margin-top: 40px; padding: 20px; border-top: 1px solid #333; color: #aaa;">
+    <footer>
         <p>
             <a href="index.html">🏠 Index</a> |
             <a href="contact.html">📬 Contact</a> |
@@ -93,5 +129,6 @@
             <a href="latest.html">🆕 Latest Cards</a>
         </p>
     </footer>
+
 </body>
 </html>
