Add Belfast, Taihou and Mash

--- a/index.html
+++ b/index.html
@@ -208,10 +208,10 @@
             "Naruto": { type: "anime", cards: ["Tsunade", "Kushina", "Naruko", "Hinata"] },
             "Bleach": { type: "anime", cards: ["Yoruichi", "Nelliel_tu_Odelschwanck", "Rangiku"] },
             "Sousou no Frieren": { type: "anime", cards: ["Frieren", "Fern", "Übel"] },
-            "Fate": { type: "game", cards: ["Nero", "Scathach", "BB", "Zenobia"] },
+            "Fate": { type: "game", cards: ["Nero", "Scathach", "BB", "Zenobia", "Mash"] },
             "Final Fantasy": { type: "game", cards: ["Rikku", "Aerith", "Tifa"] },
             "Last Origin": { type: "game", cards: ["Sekhmet_of_Death", "Cerestia_of_Life", "Miho", "Fenrir"] },
-            "Azur Lane": { type: "game", cards: ["Elbe"] },
+            "Azur Lane": { type: "game", cards: ["Elbe", "Belfast", "Taihou"] },
             "Umamusume": { type: "game", cards: ["Kiseki"] },
             "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
             "Marvel": { type: "anime", cards: ["Psylocke", "Rogue"] },
