--- a/latest.html
+++ b/latest.html
@@ -62,6 +62,19 @@
     <h1>🆕 Latest Card Additions</h1>
 
     <div class="news-entry">
+        <h2>02/06/2025</h2>
+        <div class="category">Azur Lane:</div>
+        <ul>
+            <li>Belfast</li>
+            <li>Taihou</li>
+        </ul>
+        <div class="category">Zenless Zone Zero:</div>
+        <ul>
+            <li>Mash Kyrielight</li>
+        </ul>
+    </div>
+
+    <div class="news-entry">
         <h2>01/06/2025</h2>
         <div class="category">Wuthering Waves:</div>
         <ul>
