--- a/latest.html
+++ b/latest.html
@@ -68,22 +68,34 @@
             <li>Belfast</li>
             <li>Taihou</li>
         </ul>
-        <div class="category">Zenless Zone Zero:</div>
+        <div class="category">Fate:</div>
         <ul>
             <li>Mash Kyrielight</li>
+        </ul>
+        <div class="category">Genshin Impact:</div>
+        <ul>
+            <li>Kiku Shinobu</li>
+        </ul>
+        <div class="category">Love Live:</div>
+        <ul>
+            <li>Ayase Eli</li>
+        </ul>
+        <div class="category">Others:</div>
+        <ul>
+            <li>Nakano Miku</li>
         </ul>
     </div>
 
     <div class="news-entry">
         <h2>01/06/2025</h2>
-        <div class="category">Wuthering Waves:</div>
+        <div class="category">Wuthering Waves 🆕 :</div>
         <ul>
             <li>Jinhsi</li>
             <li>Cantarella</li>
             <li>Phoebe</li>
             <li>Zani</li>
         </ul>
-        <div class="category">Zenless Zone Zero:</div>
+        <div class="category">Zenless Zone Zero 🆕 :</div>
         <ul>
             <li>Hoshimi Miyabi</li>
             <li>Evelyn Chevalier</li>
@@ -94,13 +106,13 @@
 
     <div class="news-entry">
         <h2>31/05/2025</h2>
-        <div class="category">Sousou no Frieren:</div>
+        <div class="category">Sousou no Frieren 🆕 :</div>
         <ul>
             <li>Frieren</li>
             <li>Fern</li>
             <li>Übel</li>
         </ul>
-        <div class="category">Vtuber:</div>
+        <div class="category">Vtuber 🆕 :</div>
         <ul>
             <li>Shylily</li>
             <li>Patra</li>
@@ -121,7 +133,7 @@
             <li>BB</li>
             <li>Zenobia</li>
         </ul>
-        <div class="category">Bleach:</div>
+        <div class="category">Bleach 🆕 :</div>
         <ul>
             <li>Nelliel tu Odelschwanck</li>
             <li>Matsumoto Rangiku</li>
