Add Yae Miko, Yinlin, Shorekeeper, and Makima

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
     <script>
         const cardData = {
-            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu"] },
+            "Genshin Impact": { type: "game", cards: ["Ganyu", "Yelan", "Eula", "Rosaria", "Furina","Shinobu","Yae_Miko"] },
             "Zenless Zone Zero": { type: "game", cards: ["Miyabi", "Evelyn", "Caesar", "Jane"] },
-            "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani"] },
+            "Withering Waves": { type: "game", cards: ["Jinhsi", "Cantarella", "Phoebe", "Zani","Shorekeeper","Yinlin"] },
             "Overwatch": { type: "game", cards: ["Dva", "Mercy", "Kiriko"] },
             "League of Legends": { type: "game", cards: ["Jinx", "Miss_Fortune"] },
             "Pokemon": { type: "game", cards: ["Cynthia", "Hex_Maniac"] },
@@ -215,11 +215,11 @@
             "Umamusume": { type: "game", cards: ["Kiseki"] },
             "DC": { type: "anime", cards: ["Zatanna", "Hawkgirl"] },
             "Marvel": { type: "anime", cards: ["Psylocke", "Rogue"] },
-            "Other": { type: "other", cards: ["Ram", "Rei", "Weiss", "Purah", "2B", "Mitsuri","Nakano_Miku"] }
+            "Other": { type: "other", cards: ["Ram", "Rei", "Weiss", "Purah", "2B", "Mitsuri","Nakano_Miku","Makima"] }
         };
 
         const latestCards = [
-            "Belfast", "Taihou", "Mash","Shinobu","Nakano_Miku","Eli"
+            "Yae_Miko", "Shorekeeper", "Yinlin","Makima"
         ];
 
         const searchInput = document.getElementById("searchInput");
