--- a/latest.html
+++ b/latest.html
@@ -62,6 +62,23 @@
     <h1>🆕 Latest Card Additions</h1>
 
     <div class="news-entry">
+        <h2>03/06/2025</h2>
+        <div class="category">Wuthering Waves:</div>
+        <ul>
+            <li>Shorekeeper</li>
+            <li>Yinlin</li>
+        </ul>
+        <div class="category">Genshin Impact:</div>
+        <ul>
+            <li>Yae Miko</li>
+        </ul>
+        <div class="category">Others:</div>
+        <ul>
+            <li>Makima</li>
+        </ul>
+    </div>
+
+    <div class="news-entry">
         <h2>02/06/2025</h2>
         <div class="category">Azur Lane:</div>
         <ul>
@@ -104,41 +121,6 @@
         </ul>
     </div>
 
-    <div class="news-entry">
-        <h2>31/05/2025</h2>
-        <div class="category">Sousou no Frieren 🆕 :</div>
-        <ul>
-            <li>Frieren</li>
-            <li>Fern</li>
-            <li>Übel</li>
-        </ul>
-        <div class="category">Vtuber 🆕 :</div>
-        <ul>
-            <li>Shylily</li>
-            <li>Patra</li>
-            <li>Projekt Melody</li>
-            <li>Silvervale</li>
-        </ul>
-        <div class="category">High School DxD:</div>
-        <ul>
-            <li>Rias Gremory</li>
-        </ul>
-        <div class="category">Genshin Impact:</div>
-        <ul>
-            <li>Rosaria</li>
-            <li>Furina</li>
-        </ul>
-        <div class="category">Fate:</div>
-        <ul>
-            <li>BB</li>
-            <li>Zenobia</li>
-        </ul>
-        <div class="category">Bleach 🆕 :</div>
-        <ul>
-            <li>Nelliel tu Odelschwanck</li>
-            <li>Matsumoto Rangiku</li>
-        </ul>
-    </div>
 
     <!-- More entries can be added in the same format -->
 
